syntax = "proto3";

package auth;

enum ServingStatus {
  UNKNOWN = 0;
  SERVING = 1;
  NOT_SERVING = 2;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

service AuthService {
  rpc CheckLoggedIn (CheckRequest) returns (CheckResponse);
}

message User {
  string createdAt = 1;
  string deletedAt = 2;
  string email = 3;
  string id = 4;
  string name = 5;
  string role = 6;
  string updatedAt = 7;
}

message CheckRequest {
  string jwt = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  string status = 1;
}

message CheckResponse {
  bool isValid = 1;
  string sessionId = 2;
  User user = 3;
}

message Empty {}
